Fixed horizontal scroll issue with dropdown menu

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 body {
   font-family: "Lato", sans-serif;
   background-color: white;
-  max-width: 100%;
+  width: 100%;
   overflow-x: hidden;
 }
 
@@ -198,7 +198,7 @@ body {
 /* DROPDOWN MENU */
 .dropdown-menu {
   display: none;
-  position: absolute;
+  position: fixed;
   right: 3rem;
   top: 3rem;
   transform: translateX(120%);
